# github-activity

./: .gitignore  README.md  pyproject.toml
github_activity/: cli.py  client.py  fetch_branches.py  fetch_commits_for_branch.py  fetch_issue_comments.py  fetch_issues.py  fetch_pull_request_comments.py  fetch_pull_requests.py
github_api/: cli.py  client.py  fetch_branches.py  fetch_commits_for_branch.py  fetch_issues.py  fetch_pull_request_comments.py  fetch_pull_requests.py  github_schema.py
queries/: fetch_branches.graphql  fetch_commits_for_branch.graphql  fetch_issue_comments.graphql  fetch_issues.graphql  fetch_pull_request_comments.graphql  fetch_pull_requests.graphql
