[tool.poetry]
name = "github-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sgqlc = "^14.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-randomly = "^3.10.1"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
pytest-pudb = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fetch = 'github_api.cli:main'

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
extend-exclude = """
^/github_api/github_schema.py
"""
